# Easychat

./: .gitignore  CMakeLists.txt  README.md  chatwindow.cpp  chatwindow.h  chatwindow.ui  login_window.cpp  login_window.h  login_window.ui  main.cpp  notification.cpp  notification.h  signupwindow.cpp  signupwindow.h  signupwindow.ui  testwindow.ui  userlist.cpp  userlist.h  userlist.ui
Client/: CMakeLists.txt  README.md  chatwindow.cpp  chatwindow.h  chatwindow.ui  dialog.h  dialog.ui  login_window.h  login_window.ui  notification.ui  signupwindow.cpp  signupwindow.h  userlist.cpp  userlist.h  userlist.ui
Server/: README.md  go.mod  go.sum  main.go  server.go
